fix control respuesta